# COEX-user-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: ButtonClient.cs  Controller.cs  Globals.cs  HudController.cs  SpriteChange.cs  TCPChat.cs  TcpConnectedClient.cs  UDPChat.cs  UdpConnectedClient.cs  scr_buttonsend.cs  scr_controller.cs  scr_spritechange.cs
scripts/scripts/: CamScript.cs  Controller.cs  DataReceive.cs  Globals.cs  HudController.cs  MenuController.cs  RecordScript.cs  SpriteChange.cs  TcpChat.cs  TcpConnectedClient.cs  UdpChat.cs  UdpConnectClientVideo.cs  UdpConnectedClient.cs  UdpServerVideo.cs  colorChange.cs
tcp_commands/: commands_template.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
udp/: telemetry_template.h  udp_telemetry.cpp  udp_telemetry.h
